--- a/templates/index.html
+++ b/templates/index.html
@@ -113,13 +113,13 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.cleverprogrammer.com/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.youtube.com/channel/UCI63mZ_ZgDQcOmuv1i3NtXQ" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/cleverprogrammer.png" class="img-responsive" alt="Slice of cake">
+                        <img src="https://1000logos.net/wp-content/uploads/2017/05/New-YouTube-logo.jpg" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
