--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Welcome_heading.svg/1280px-Welcome_heading.svg.png" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey Bello {{name}}!</h1>
                         <hr class="star-light">
