--- a/templates/index.html
+++ b/templates/index.html
@@ -178,7 +178,7 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://twitter.com/YUVARAJ48046495" target="_blank" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://twitter.com/YUVARAJ48046495" target="_blank" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-Twitter"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.youtube.com/channel/UCI63mZ_ZgDQcOmuv1i3NtXQ" class="btn-social btn-outline" target="_blank"><span class="sr-only">YouTube</span><i class="fa fa-fw fa-youtube"></i></a>
