--- a/templates/index.html
+++ b/templates/index.html
@@ -169,7 +169,7 @@
                         <h3>Location</h3>
                         <p>Chennai,
                             <br>Tamil Nadu</p>
-                            <br>India</p>
+                            <p>India</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3></h3>
@@ -185,6 +185,8 @@
                             <li>
                                 <a href="https://github.com/YUVARAJ-R-ai" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
                             </li>
+                            <a href="https://www.instagram.com/technodemons.official/" class="btn-social btn-outline" target="_blank"><span class="sr-only">Instagram</span><i class="fa fa-fw fa-instagram"></i></a>
+                            </li>
                         </ul>
                     </div>
                     
@@ -195,7 +197,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Clever Programmer - CP Flask Portfolio 2017 - Created on C9
+                        r.yuvaraj001
                     </div>
                 </div>
             </div>
